# acmsg

./: .envrc  .gitignore  CHANGELOG.md  MANIFEST.in  README.md  TODO.md  flake.nix  justfile  package.nix  pyproject.toml  pytest.ini
.github/workflows/: publish-and-release.yaml  publish.yaml  release-and-publish.yaml  test.yaml
prompts/: system.md  system.txt  user.md  user.txt
scripts/: bump-version.nix  create-release.nix
scripts/create-release/: create-release.sh  default.nix
src/acmsg/: __init__.py  __main__.py  config.py  constants.py  exceptions.py  git_utils.py  open_router.py  templates.py
src/acmsg/api/: __init__.py  openrouter.py
src/acmsg/cli/: __init__.py  commands.py  parsers.py
src/acmsg/core/: __init__.py  config.py  generation.py  git.py
src/acmsg/prompts/: system.md  user.md
src/acmsg/templates/: __init__.py  renderer.py
src/acmsg/templates/assets/: __init__.py  system_prompt.md  template_config.yaml  user_prompt.md
tests/: README.md  __init__.py  conftest.py  test_cli_commands.py  test_cli_parsers.py  test_config.py  test_generation.py  test_git.py  test_git_utils.py  test_main.py  test_open_router.py  test_openrouter.py  test_templates.py
