[project]
name = "acmsg"
version = "0.1.0"
description = "Automatic git commit message generator using AI models & the OpenRouter API."
requires-python = ">=3.12"
keywords = [
  "AI",
  "artificial intelligence",
  "commit message",
  "commit",
  "git",
  "OpenRouter",
]
authors = [{ email = "quinn@qeden.dev" }, { name = "Quinn Edenfield" }]
maintainers = [{ email = "quinn@qeden.dev" }, { name = "Quinn Edenfield" }]
dependencies = [
  "requests (>=2.32.3,<3.0.0)",
  "pyyaml (>=6.0.2,<7.0.0)",
  "colorama (>=0.4.6,<0.5.0)",
]

[project.urls]
repository = "https://github.com/quinneden/acmsg"

[project.scripts]
acmsg = "acmsg.__main__:main"
